--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: next-build
+          path: out
       - name: "deploy"
         run: |
           npx -p "@getmeli/cli" meli upload ./out \
