--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "next": "10.2.3",
     "next-nprogress": "^1.4.0",
     "next-seo": "^4.26.0",
-    "node-sass": "4.14.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sass": "^1.35.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.1",
