--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 name: main
 on: [ push ]
-env:
-  MELI_SITE: "b1809c4c-2c2e-45ec-bc90-106b829f5af0"
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -34,23 +32,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '12'
       - uses: actions/download-artifact@v2
         with:
           name: next-build
           path: out
+      - name: "install ssh key"
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_KEY }}
+          name: id_rsa
+          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+          config: ${{ secrets.SSH_CONFIG }}
       - name: "deploy"
-        run: |
-          npx -p "@getmeli/cli" meli upload ./out \
-            --url "https://meli.conlang.dev" \
-            --site "$MELI_SITE" \
-            --token "$MELI-TOKEN" \
-        env:
-          MELI_TOKEN: ${{ secrets.MELI_TOKEN }}
-          # Enable PR previews:
-          # uses the default GITHUB_TOKEN set by Github Actions
-          # https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: rsync ./out conlangdev@host:/opt/conlangdev
