--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,11 @@
 name: main
-on: [ push ]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,38 +18,19 @@ jobs:
           yarn lint
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: lint
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Build container image
+        run: docker build . --file Dockerfile
+      - name: Login to container registry
+        uses: docker/login-action@v1
         with:
-          node-version: '12'
-      - name: "pull environment"
-        run: 'echo "$ENV_PRODUCTION" > .env.production'
-        env:
-          ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
-      - name: "build"
-        run: |
-          yarn install
-          yarn build
-      - uses: actions/upload-artifact@v2
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push to container registry
+        uses: docker/build-push-action@v2
         with:
-          name: next-build
-          path: out
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: next-build
-          path: out
-      - name: "install ssh key"
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_KEY }}
-          name: id_rsa
-          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
-          config: ${{ secrets.SSH_CONFIG }}
-      - name: "deploy"
-        run: rsync -azP --delete ./out/ conlangdev@host:/opt/conlangdev
+          push: true
+          tags: ghcr.io/${{ github.repository }}:latest
