--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,10 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v2
-      - name: Build container image
-        run: docker build . --file Dockerfile
+      - name: Pull environment
+        run: 'echo "$ENV_PRODUCTION" > .env.local'
+        env:
+          ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
       - name: Login to container registry
         uses: docker/login-action@v1
         with:
