--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-      - uses: actions/checkout@v2
-      - name: Pull environment
-        run: 'echo "$ENV_PRODUCTION" > .env.local'
-        env:
-          ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
       - name: Login to container registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull environment
+        run: 'echo "$ENV_PRODUCTION" > .env.local'
+        env:
+          ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
       - name: Push to container registry
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
