--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.21.1",
     "framer-motion": "^4",
     "moment": "^2.29.1",
-    "next": "10.2.3",
+    "next": "^11.0.1",
     "next-nprogress": "^1.4.0",
     "next-seo": "^4.26.0",
     "react": "17.0.2",
