--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "extends": [
     "eslint:recommended",
+    "next",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier"
@@ -24,6 +25,7 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react-hooks/exhaustive-deps": "off",
     "prettier/prettier": ["error"]
   },
   "settings": {
