--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11",
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
+    "eslint-config-next": "^11.0.1",
+    "eslint-plugin-next": "^0.0.0",
     "framer-motion": "^4",
     "moment": "^2.29.1",
     "next": "^11.0.1",
